--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <title>ENGLISH | PRACTICE</title>
 
   <style>
-    /* === Base Setup === */
     body {
       font-family: "Poppins", sans-serif;
       background: linear-gradient(135deg, #0f172a, #1e293b);
@@ -14,70 +13,102 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
+      justify-content: flex-start;
       min-height: 100vh;
       margin: 0;
-      padding: 20px;
+      padding: 40px 20px;
       text-align: center;
     }
 
     h1 {
       margin: 15px 0;
-      font-size: 1.6rem;
+      font-size: 1.5rem;
       letter-spacing: 0.5px;
-      transition: transform 0.2s ease, color 0.2s ease;
     }
 
-    /* === Link Style === */
-    h1 a {
+    .btn {
       text-decoration: none;
       color: #38bdf8;
-      background: rgba(56, 189, 248, 0.1);
+      background: rgba(56,189,248,0.1);
       padding: 12px 22px;
       border-radius: 10px;
-      border: 1px solid rgba(56, 189, 248, 0.3);
-      box-shadow: 0 4px 15px rgba(56, 189, 248, 0.15);
+      border: 1px solid rgba(56,189,248,0.3);
+      box-shadow: 0 4px 15px rgba(56,189,248,0.15);
       transition: all 0.3s ease;
       display: inline-block;
+      cursor: pointer;
     }
 
-    /* === Hover Effects === */
-    h1 a:hover {
+    .btn:hover {
       background: #38bdf8;
       color: #0f172a;
-      transform: translateY(-4px);
-      box-shadow: 0 8px 25px rgba(56, 189, 248, 0.35);
+      transform: translateY(-3px);
+      box-shadow: 0 8px 25px rgba(56,189,248,0.35);
     }
 
-    /* === Optional: small animation === */
-    h1 a:active {
-      transform: translateY(0);
-      box-shadow: 0 2px 10px rgba(56, 189, 248, 0.2);
+    /* === Dropdown container === */
+    .dropdown {
+      overflow: hidden;
+      max-height: 0;
+      transition: max-height 0.5s ease;
     }
 
-    /* === Responsive === */
-    @media (max-width: 480px) {
-      h1 {
-        font-size: 1.2rem;
-      }
-      h1 a {
-        padding: 10px 16px;
-      }
+    .dropdown.show {
+      max-height: 500px; /* যথেষ্ট বড় */
+    }
+
+    .dropdown h1 {
+      margin: 10px 0;
+    }
+
+    .dropdown a {
+      text-decoration: none;
+      color: #38bdf8;
+      background: rgba(56,189,248,0.1);
+      padding: 10px 20px;
+      border-radius: 8px;
+      border: 1px solid rgba(56,189,248,0.3);
+      box-shadow: 0 3px 10px rgba(56,189,248,0.15);
+      display: inline-block;
+      transition: all 0.3s ease;
+    }
+
+    .dropdown a:hover {
+      background: #38bdf8;
+      color: #0f172a;
+    }
+
+    @media (max-width:480px){
+      h1{font-size:1.2rem;}
+      .btn{padding:10px 16px;}
     }
   </style>
 </head>
 
 <body>
-  <h1>
-    <a href="https://abuhena-roni.github.io/English_Practice/Hover-sentences-Bengali-English/">
-      Hover sentences Bengali-English 01 (I)
-    </a>
-  </h1>
+  <h1><span class="btn" id="toggleBtn">Hover sentences Bengali-English ▼</span></h1>
 
-  <h1>
-    <a href="https://abuhena-roni.github.io/English_Practice/Hover-sentences-Bengali-English_02/">
-      Hover sentences Bengali-English 02 (I)
-    </a>
-  </h1>
+  <div class="dropdown" id="dropdownMenu">
+    <h1>
+      <a href="https://abuhena-roni.github.io/English_Practice/Hover-sentences-Bengali-English/Hover-sentences-Bengali-English-01/">
+        Hover sentences Bengali-English 01 Usage(I)
+      </a>
+    </h1>
+
+    <h1>
+      <a href="https://abuhena-roni.github.io/English_Practice/Hover-sentences-Bengali-English/Hover-sentences-English-Bengali_02/">
+        Hover sentences English-Bengali 02 Usage(I)
+      </a>
+    </h1>
+  </div>
+
+  <script>
+    const toggleBtn = document.getElementById("toggleBtn");
+    const dropdownMenu = document.getElementById("dropdownMenu");
+
+    toggleBtn.addEventListener("click", () => {
+      dropdownMenu.classList.toggle("show");
+    });
+  </script>
 </body>
 </html>
