Add English Typing Practice page and update index for navigation

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       </a>
     </h1>
   </div>
-
+  <h1><a href="https://abuhena-roni.github.io/English_Practice/english-typing-practice.html/">English Typing Practice</a></h1>
   <script>
     const toggleBtn = document.getElementById("toggleBtn");
     const dropdownMenu = document.getElementById("dropdownMenu");
